ex11
# --coding:utf8--

print("How old are you?"),
age = raw_input()
print("How tall are you?"),
height = raw_input()
print("How much do you weight?"),
weight = raw_input()

print("So, you're %r old, %r tall and %r heavy" % (age, height, weight))

# 上面的代碼一直跑出這樣的錯誤
'''
File "ex11.py", line 9
    print("So, you're %r old, %r tall and %r heavy"), % (age, height, weight)
                                                      ^
SyntaxError: invalid syntax
'''
'''
經過譯者表示ython2升级为python3后在，2中存在input和raw_input两个类似功能的函数，
在3认为这是冗余函数，于是3将raw_input作为垃圾扔掉了。因此我们在运行2的程序前需要将其中的raw_input全部替换为input。
'''
'''
print("How old are you?"),
age = input()
print("How tall are you?"),
height = input()
print("How much do you weight?"),
weight = input()

print("So, you're %r old, %r tall and %r heavy" % (age, height, weight))
'''
"""
但是經過仔細檢查後發現在
print("So, you're %r old, %r tall and %r heavy" % (age, height, weight))中的 heavy"後多了一個,
經過刪除後，程式可以正常運轉
"""

#本章心得，使用过去使用过的格式字符串以及打印，并且学习到Python2与Python3的差异性。另外在debug上更须注意,是否多打。
